--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,21 @@
-body{
-    color: deeppink;
-    text-align: center;
+body
+{
+    color: #333;
+    text-align: left;
     font-family: "Arial";
 
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
