--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: left;
-    font-family: "Courier";
+    font-family: "Arial";
     text-align: center;
     font-size: 16px;
     margin: 0;
