Color de fondo, logo nuevo y mejor color de header

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: red;
+    color: #1e1f24;
     text-align: left;
     font-family: "Arial";
     text-align: center;
@@ -19,6 +19,12 @@ body
     margin: 0;
     padding: 0.5em;
 
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -40,4 +46,10 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    background:  white;
+    padding: 1em;
 }
